* Implemented the AudioAction, which is used to send audio control events to the service

--- a/sample/src/main/res/layout/audio_playing_activity.xml
+++ b/sample/src/main/res/layout/audio_playing_activity.xml
@@ -6,9 +6,16 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/audio_playing_activity_toggle"
+        android:id="@+id/audio_playing_activity_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="play"/>
+
+    <Button
+        android:id="@+id/audio_playing_activity_pause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="pause"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
