--- a/sample/src/main/res/layout/audio_playing_activity.xml
+++ b/sample/src/main/res/layout/audio_playing_activity.xml
@@ -1,21 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/audio_playing_activity_label_guide_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="40dp"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/audio_playing_activity_label_guide_end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="40dp"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/audio_playing_activity_button_guide_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="57dp" />
 
     <Button
         android:id="@+id/audio_playing_activity_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="play"/>
+        android:text="play"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <Button
         android:id="@+id/audio_playing_activity_pause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:text="pause"/>
+        android:text="pause"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <TextView
+        android:id="@+id/audio_playing_activity_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/audio_playing_activity_button_guide_start"
+        app:layout_constraintRight_toRightOf="@+id/audio_playing_activity_label_guide_start"
+        android:text="00:00"/>
+
+    <SeekBar
+        android:id="@+id/audio_playing_activity_seekbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@+id/audio_playing_activity_label_guide_start"
+        app:layout_constraintTop_toBottomOf="@+id/audio_playing_activity_button_guide_start"
+        app:layout_constraintRight_toRightOf="@+id/audio_playing_activity_label_guide_end"/>
+
+    <TextView
+        android:id="@+id/audio_playing_activity_duration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="start"
+        app:layout_constraintLeft_toLeftOf="@+id/audio_playing_activity_label_guide_end"
+        app:layout_constraintTop_toBottomOf="@+id/audio_playing_activity_button_guide_start"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="00:00"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
